fichiers cours 2122/TP1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statement SEMICOLON start
Rule 2     start -> statement SEMICOLON
Rule 3     statement -> PRINT LPAREN expression RPAREN
Rule 4     statement -> expression
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression TIMES expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> LPAREN expression RPAREN
Rule 10    expression -> NUMBER
Rule 11    expression -> NAME
Rule 12    expression -> expression AND expression
Rule 13    expression -> expression OR expression
Rule 14    expression -> expression COMPARE expression
Rule 15    expression -> expression COMPARE expression COMPARE expression
Rule 16    expression -> NAME AFFECT expression

Terminals, with rules where they appear

AFFECT               : 16
AND                  : 12
COMPARE              : 14 15 15
DIVIDE               : 8
LPAREN               : 3 9
MINUS                : 7
NAME                 : 11 16
NUMBER               : 10
OR                   : 13
PLUS                 : 5
PRINT                : 3
RPAREN               : 3 9
SEMICOLON            : 1 2
TIMES                : 6
error                : 

Nonterminals, with rules where they appear

expression           : 3 4 5 5 6 6 7 7 8 8 9 12 12 13 13 14 14 15 15 15 16
start                : 1 0
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement SEMICOLON start
    (2) start -> . statement SEMICOLON
    (3) statement -> . PRINT LPAREN expression RPAREN
    (4) statement -> . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    PRINT           shift and go to state 3
    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    start                          shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> statement . SEMICOLON start
    (2) start -> statement . SEMICOLON

    SEMICOLON       shift and go to state 8


state 3

    (3) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 9


state 4

    (9) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 10

state 5

    (4) statement -> expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    SEMICOLON       reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 11
    TIMES           shift and go to state 12
    MINUS           shift and go to state 13
    DIVIDE          shift and go to state 14
    AND             shift and go to state 15
    OR              shift and go to state 16
    COMPARE         shift and go to state 17


state 6

    (10) expression -> NUMBER .

    PLUS            reduce using rule 10 (expression -> NUMBER .)
    TIMES           reduce using rule 10 (expression -> NUMBER .)
    MINUS           reduce using rule 10 (expression -> NUMBER .)
    DIVIDE          reduce using rule 10 (expression -> NUMBER .)
    AND             reduce using rule 10 (expression -> NUMBER .)
    OR              reduce using rule 10 (expression -> NUMBER .)
    COMPARE         reduce using rule 10 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 10 (expression -> NUMBER .)
    RPAREN          reduce using rule 10 (expression -> NUMBER .)


state 7

    (11) expression -> NAME .
    (16) expression -> NAME . AFFECT expression

    PLUS            reduce using rule 11 (expression -> NAME .)
    TIMES           reduce using rule 11 (expression -> NAME .)
    MINUS           reduce using rule 11 (expression -> NAME .)
    DIVIDE          reduce using rule 11 (expression -> NAME .)
    AND             reduce using rule 11 (expression -> NAME .)
    OR              reduce using rule 11 (expression -> NAME .)
    COMPARE         reduce using rule 11 (expression -> NAME .)
    SEMICOLON       reduce using rule 11 (expression -> NAME .)
    RPAREN          reduce using rule 11 (expression -> NAME .)
    AFFECT          shift and go to state 18


state 8

    (1) start -> statement SEMICOLON . start
    (2) start -> statement SEMICOLON .
    (1) start -> . statement SEMICOLON start
    (2) start -> . statement SEMICOLON
    (3) statement -> . PRINT LPAREN expression RPAREN
    (4) statement -> . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    $end            reduce using rule 2 (start -> statement SEMICOLON .)
    PRINT           shift and go to state 3
    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    statement                      shift and go to state 2
    start                          shift and go to state 19
    expression                     shift and go to state 5

state 9

    (3) statement -> PRINT LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 20

state 10

    (9) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    RPAREN          shift and go to state 21
    PLUS            shift and go to state 11
    TIMES           shift and go to state 12
    MINUS           shift and go to state 13
    DIVIDE          shift and go to state 14
    AND             shift and go to state 15
    OR              shift and go to state 16
    COMPARE         shift and go to state 17


state 11

    (5) expression -> expression PLUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 22

state 12

    (6) expression -> expression TIMES . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 23

state 13

    (7) expression -> expression MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 24

state 14

    (8) expression -> expression DIVIDE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 25

state 15

    (12) expression -> expression AND . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 26

state 16

    (13) expression -> expression OR . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 27

state 17

    (14) expression -> expression COMPARE . expression
    (15) expression -> expression COMPARE . expression COMPARE expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 28

state 18

    (16) expression -> NAME AFFECT . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 29

state 19

    (1) start -> statement SEMICOLON start .

    $end            reduce using rule 1 (start -> statement SEMICOLON start .)


state 20

    (3) statement -> PRINT LPAREN expression . RPAREN
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    RPAREN          shift and go to state 30
    PLUS            shift and go to state 11
    TIMES           shift and go to state 12
    MINUS           shift and go to state 13
    DIVIDE          shift and go to state 14
    AND             shift and go to state 15
    OR              shift and go to state 16
    COMPARE         shift and go to state 17


state 21

    (9) expression -> LPAREN expression RPAREN .

    PLUS            reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    AND             reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    OR              reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    COMPARE         reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    SEMICOLON       reduce using rule 9 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 9 (expression -> LPAREN expression RPAREN .)


state 22

    (5) expression -> expression PLUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    PLUS            reduce using rule 5 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 5 (expression -> expression PLUS expression .)
    AND             reduce using rule 5 (expression -> expression PLUS expression .)
    OR              reduce using rule 5 (expression -> expression PLUS expression .)
    COMPARE         reduce using rule 5 (expression -> expression PLUS expression .)
    SEMICOLON       reduce using rule 5 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 5 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 12
    DIVIDE          shift and go to state 14

  ! TIMES           [ reduce using rule 5 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 5 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 13 ]
  ! AND             [ shift and go to state 15 ]
  ! OR              [ shift and go to state 16 ]
  ! COMPARE         [ shift and go to state 17 ]


state 23

    (6) expression -> expression TIMES expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    PLUS            reduce using rule 6 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 6 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 6 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 6 (expression -> expression TIMES expression .)
    AND             reduce using rule 6 (expression -> expression TIMES expression .)
    OR              reduce using rule 6 (expression -> expression TIMES expression .)
    COMPARE         reduce using rule 6 (expression -> expression TIMES expression .)
    SEMICOLON       reduce using rule 6 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 6 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 11 ]
  ! TIMES           [ shift and go to state 12 ]
  ! MINUS           [ shift and go to state 13 ]
  ! DIVIDE          [ shift and go to state 14 ]
  ! AND             [ shift and go to state 15 ]
  ! OR              [ shift and go to state 16 ]
  ! COMPARE         [ shift and go to state 17 ]


state 24

    (7) expression -> expression MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    PLUS            reduce using rule 7 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 7 (expression -> expression MINUS expression .)
    AND             reduce using rule 7 (expression -> expression MINUS expression .)
    OR              reduce using rule 7 (expression -> expression MINUS expression .)
    COMPARE         reduce using rule 7 (expression -> expression MINUS expression .)
    SEMICOLON       reduce using rule 7 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 7 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 12
    DIVIDE          shift and go to state 14

  ! TIMES           [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 13 ]
  ! AND             [ shift and go to state 15 ]
  ! OR              [ shift and go to state 16 ]
  ! COMPARE         [ shift and go to state 17 ]


state 25

    (8) expression -> expression DIVIDE expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    PLUS            reduce using rule 8 (expression -> expression DIVIDE expression .)
    TIMES           reduce using rule 8 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 8 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 8 (expression -> expression DIVIDE expression .)
    AND             reduce using rule 8 (expression -> expression DIVIDE expression .)
    OR              reduce using rule 8 (expression -> expression DIVIDE expression .)
    COMPARE         reduce using rule 8 (expression -> expression DIVIDE expression .)
    SEMICOLON       reduce using rule 8 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 8 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 11 ]
  ! TIMES           [ shift and go to state 12 ]
  ! MINUS           [ shift and go to state 13 ]
  ! DIVIDE          [ shift and go to state 14 ]
  ! AND             [ shift and go to state 15 ]
  ! OR              [ shift and go to state 16 ]
  ! COMPARE         [ shift and go to state 17 ]


state 26

    (12) expression -> expression AND expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    SEMICOLON       reduce using rule 12 (expression -> expression AND expression .)
    RPAREN          reduce using rule 12 (expression -> expression AND expression .)
    PLUS            shift and go to state 11
    TIMES           shift and go to state 12
    MINUS           shift and go to state 13
    DIVIDE          shift and go to state 14
    AND             shift and go to state 15
    OR              shift and go to state 16
    COMPARE         shift and go to state 17

  ! PLUS            [ reduce using rule 12 (expression -> expression AND expression .) ]
  ! TIMES           [ reduce using rule 12 (expression -> expression AND expression .) ]
  ! MINUS           [ reduce using rule 12 (expression -> expression AND expression .) ]
  ! DIVIDE          [ reduce using rule 12 (expression -> expression AND expression .) ]
  ! AND             [ reduce using rule 12 (expression -> expression AND expression .) ]
  ! OR              [ reduce using rule 12 (expression -> expression AND expression .) ]
  ! COMPARE         [ reduce using rule 12 (expression -> expression AND expression .) ]


state 27

    (13) expression -> expression OR expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    SEMICOLON       reduce using rule 13 (expression -> expression OR expression .)
    RPAREN          reduce using rule 13 (expression -> expression OR expression .)
    PLUS            shift and go to state 11
    TIMES           shift and go to state 12
    MINUS           shift and go to state 13
    DIVIDE          shift and go to state 14
    AND             shift and go to state 15
    OR              shift and go to state 16
    COMPARE         shift and go to state 17

  ! PLUS            [ reduce using rule 13 (expression -> expression OR expression .) ]
  ! TIMES           [ reduce using rule 13 (expression -> expression OR expression .) ]
  ! MINUS           [ reduce using rule 13 (expression -> expression OR expression .) ]
  ! DIVIDE          [ reduce using rule 13 (expression -> expression OR expression .) ]
  ! AND             [ reduce using rule 13 (expression -> expression OR expression .) ]
  ! OR              [ reduce using rule 13 (expression -> expression OR expression .) ]
  ! COMPARE         [ reduce using rule 13 (expression -> expression OR expression .) ]


state 28

    (14) expression -> expression COMPARE expression .
    (15) expression -> expression COMPARE expression . COMPARE expression
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    AND             reduce using rule 14 (expression -> expression COMPARE expression .)
    OR              reduce using rule 14 (expression -> expression COMPARE expression .)
    COMPARE         reduce using rule 14 (expression -> expression COMPARE expression .)
    SEMICOLON       reduce using rule 14 (expression -> expression COMPARE expression .)
    RPAREN          reduce using rule 14 (expression -> expression COMPARE expression .)
    PLUS            shift and go to state 11
    TIMES           shift and go to state 12
    MINUS           shift and go to state 13
    DIVIDE          shift and go to state 14

  ! PLUS            [ reduce using rule 14 (expression -> expression COMPARE expression .) ]
  ! TIMES           [ reduce using rule 14 (expression -> expression COMPARE expression .) ]
  ! MINUS           [ reduce using rule 14 (expression -> expression COMPARE expression .) ]
  ! DIVIDE          [ reduce using rule 14 (expression -> expression COMPARE expression .) ]
  ! COMPARE         [ shift and go to state 31 ]
  ! AND             [ shift and go to state 15 ]
  ! OR              [ shift and go to state 16 ]


state 29

    (16) expression -> NAME AFFECT expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

    SEMICOLON       reduce using rule 16 (expression -> NAME AFFECT expression .)
    RPAREN          reduce using rule 16 (expression -> NAME AFFECT expression .)
    PLUS            shift and go to state 11
    TIMES           shift and go to state 12
    MINUS           shift and go to state 13
    DIVIDE          shift and go to state 14
    AND             shift and go to state 15
    OR              shift and go to state 16
    COMPARE         shift and go to state 17

  ! PLUS            [ reduce using rule 16 (expression -> NAME AFFECT expression .) ]
  ! TIMES           [ reduce using rule 16 (expression -> NAME AFFECT expression .) ]
  ! MINUS           [ reduce using rule 16 (expression -> NAME AFFECT expression .) ]
  ! DIVIDE          [ reduce using rule 16 (expression -> NAME AFFECT expression .) ]
  ! AND             [ reduce using rule 16 (expression -> NAME AFFECT expression .) ]
  ! OR              [ reduce using rule 16 (expression -> NAME AFFECT expression .) ]
  ! COMPARE         [ reduce using rule 16 (expression -> NAME AFFECT expression .) ]


state 30

    (3) statement -> PRINT LPAREN expression RPAREN .

    SEMICOLON       reduce using rule 3 (statement -> PRINT LPAREN expression RPAREN .)


state 31

    (15) expression -> expression COMPARE expression COMPARE . expression
    (14) expression -> expression COMPARE . expression
    (15) expression -> expression COMPARE . expression COMPARE expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . LPAREN expression RPAREN
    (10) expression -> . NUMBER
    (11) expression -> . NAME
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression COMPARE expression
    (15) expression -> . expression COMPARE expression COMPARE expression
    (16) expression -> . NAME AFFECT expression

    LPAREN          shift and go to state 4
    NUMBER          shift and go to state 6
    NAME            shift and go to state 7

    expression                     shift and go to state 32

state 32

    (15) expression -> expression COMPARE expression COMPARE expression .
    (14) expression -> expression COMPARE expression .
    (15) expression -> expression COMPARE expression . COMPARE expression
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . DIVIDE expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . COMPARE expression
    (15) expression -> expression . COMPARE expression COMPARE expression

  ! reduce/reduce conflict for PLUS resolved using rule 14 (expression -> expression COMPARE expression .)
  ! reduce/reduce conflict for TIMES resolved using rule 14 (expression -> expression COMPARE expression .)
  ! reduce/reduce conflict for MINUS resolved using rule 14 (expression -> expression COMPARE expression .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 14 (expression -> expression COMPARE expression .)
  ! reduce/reduce conflict for AND resolved using rule 14 (expression -> expression COMPARE expression .)
  ! reduce/reduce conflict for OR resolved using rule 14 (expression -> expression COMPARE expression .)
  ! reduce/reduce conflict for COMPARE resolved using rule 14 (expression -> expression COMPARE expression .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 14 (expression -> expression COMPARE expression .)
  ! reduce/reduce conflict for RPAREN resolved using rule 14 (expression -> expression COMPARE expression .)
    AND             reduce using rule 14 (expression -> expression COMPARE expression .)
    OR              reduce using rule 14 (expression -> expression COMPARE expression .)
    COMPARE         reduce using rule 14 (expression -> expression COMPARE expression .)
    SEMICOLON       reduce using rule 14 (expression -> expression COMPARE expression .)
    RPAREN          reduce using rule 14 (expression -> expression COMPARE expression .)
    PLUS            shift and go to state 11
    TIMES           shift and go to state 12
    MINUS           shift and go to state 13
    DIVIDE          shift and go to state 14
